Changelog
=========


2.2.3 (unreleased)
------------------------------------
Added Spanish translation [macagua]
Enabled i18n support [macagua]
Added improvements about README file [macagua]

2.2
------------------------------------
Added /@@fontsheet_all to show all the fonts.
There are now so many fonts that the url has to be "batched"


2.1
------------------------------------
(Re)added /@@fontsheet browserview so it now only shows enabled fonts.


2.0.3
------------------------------------
Install require plane.directives.form


2.0.1
------------------------------------
More fonts


2.0
------------------------------------
Complete remake of the product. 
This version uses another approach to fetch the fonts from google.
There is no more javascript, everything is done with CSS.
It is possible to enable multiple fonts at the same time
All settings are now moved to the 'medialog.controlpanel' 
There is a new uninstall profile (thanks Nathan) and settings from medialog.controlpanel is removed when uninstalled.



1.3
------------------------------------
Removed python script, dtml variables in css and js.
The css and js files are now in 'browser'


1.2.1
------------------------------------
Missing , in font names

1.2
------------------------------------
Sorted the fonts with most interesting first.

1.1.1
------------------------------------
Added Norwegian letters to the fontsheet

1.1
------------------------------------
Added browser view to show all available fonts.
Use it like this: http://yoursite/@@fontsheet

1.0.1
------------------------------------
There are now so many fonts available from google, so I will only try to add those that I like.

1.0
------------------------------------
Added all (but two) fonts from http://google.com/webfonts.


0.3
____________________________________
Added more fonts

0.2
____________________________________
Changed to text-fields to get more space to write the css.


0.1
____________________________________