@@ -1,0 +1,12 @@
+<?xml version="1.0"?>
+<registry>
+    <records interface="medialog.googlefonts.interfaces.IGooglefontsSettings">
+        <value key="googlefonts">h1, h2</value>
+        <value key="googlefontfamily">
+            <element>Gruppo</element>
+        </value>
+        <value key="googlefontfamilysize">300%</value>
+        <value key="googlefontcss">color: #123456</value>
+        <value key="extracss">h1 { margin-top: 10px; margin-bottom: 4px; }h2 { margin-top: 20px; margin-bottom: 8px; }</value>
+    </records>
+</registry>
